Fix Read Me button that was not showing with French language

--- a/assets/css/mystyle.css
+++ b/assets/css/mystyle.css
@@ -322,7 +322,7 @@ nav ul {
 
 .project-read-more a:hover {
     background-color: #a8a8a8;
-    color: white;
+    color: white !important;
     transition: 0.5s;
 }
 
